[project]
name = "luna-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.6",
    "playwright==1.48.0",
    "pre-commit>=4.0.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.7.1",
    "selenium>=4.27.1",
    "sentry-sdk[fastapi]>=2.20.0",
    "sqlalchemy>=2.0.36",
]
